[workspace]
resolver = "2"
members = [
    "crates/sn-list",
    "crates/sn-fetch",
    "crates/sn-summarize",
    "crates/cissp-tracker",
]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
